REMOTE SEARCHER